[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "taskforge-ai"
version = "1.0.0"
description = "Task Forge AI — Real-Time SaaS Operations RL Environment"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "CaptainMishra"}
]
dependencies = [
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.30.0",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["environment*", "server*"]